@@ -46,8 +46,8 @@ typedef enum
   ArcDistortion,
   PolarDistortion,
   DePolarDistortion,
-  Cylin2PlaneDistortion,
-  Plane2CylinDistortion,
+  Cylinder2PlaneDistortion,
+  Plane2CylinderDistortion,
   BarrelDistortion,
   BarrelInverseDistortion,
   ShepardsDistortion,
